feat: add all the default chess movements